@@ -325,7 +325,7 @@ function readdef(ref, definitions) {
 		return F.jsonschemas[ref];
 }
 
-function check_array(meta, error, value, stop, definitions, path) {
+function check_array(meta, error, value, stop, definitions, path, partial) {
 
 	if (!(value instanceof Array)) {
 		if (meta.$$REQUIRED) {
@@ -387,7 +387,7 @@ function check_array(meta, error, value, stop, definitions, path) {
 							return;
 						}
 					case 'object':
-						tmp = check_object(type, error, val, null, stop, definitions);
+						tmp = check_object(type, error, val, null, stop, definitions, null, partial);
 						if (tmp != null) {
 							response.push(tmp);
 							break;
@@ -396,7 +396,7 @@ function check_array(meta, error, value, stop, definitions, path) {
 							return;
 						}
 					case 'array':
-						tmp = check_array(type, error, value, null, definitions);
+						tmp = check_array(type, error, value, null, definitions, null, partial);
 						if (tmp != null && (!meta.uniqueItems || response.indexOf(tmp) === -1)) {
 							response.push(tmp);
 							break;
@@ -433,7 +433,7 @@ function check_array(meta, error, value, stop, definitions, path) {
 				var ref = typeof(meta.items.$ref) === 'object' ? meta.items.$ref :readdef(meta.items.$ref, definitions);
 				if (ref) {
 					var newerror = new F.ErrorBuilder();
-					tmp = transform(ref, newerror, val, false, currentpath + '[' + i + ']');
+					tmp = transform(ref, newerror, val, false, currentpath + '[' + i + ']', partial);
 					if (newerror.items.length) {
 						for (var err of newerror.items) {
 							error.push2(err.name, err.path, i);
@@ -466,7 +466,7 @@ function check_array(meta, error, value, stop, definitions, path) {
 					break;
 				case 'object':
 					var newerror = new ErrorBuilder();
-					tmp = check_object(meta.items, newerror, val, stop, definitions, currentpath);
+					tmp = check_object(meta.items, newerror, val, stop, definitions, currentpath, partial);
 					if (newerror.length) {
 						for (var err of newerror.items)
 							error.push2(meta.$$ID + '.' + err.name, err.error, currentpath, i);
@@ -474,7 +474,7 @@ function check_array(meta, error, value, stop, definitions, path) {
 						response.push(tmp);
 					break;
 				case 'array':
-					tmp = check_array(meta.items, error, value, stop, definitions, currentpath);
+					tmp = check_array(meta.items, error, value, stop, definitions, currentpath, partial);
 					if (tmp != null && (!meta.uniqueItems || response.indexOf(tmp) === -1))
 						response.push(tmp);
 					break;
@@ -510,7 +510,7 @@ function check_array(meta, error, value, stop, definitions, path) {
 	return response;
 }
 
-function check_object(meta, error, value, response, stop, definitions, path) {
+function check_object(meta, error, value, response, stop, definitions, path, partial) {
 
 	if (!value || typeof(value) !== 'object') {
 		if (meta.$$REQUIRED) {
@@ -551,6 +551,9 @@ function check_object(meta, error, value, response, stop, definitions, path) {
 		var currentpath = (path ? (path + '.') : '') + key;
 		var val = value[key];
 
+		if (partial && val === undefined)
+			continue;
+
 		switch (prop.type) {
 			case 'number':
 			case 'integer':
@@ -582,7 +585,7 @@ function check_object(meta, error, value, response, stop, definitions, path) {
 			case 'object':
 
 				if (prop.properties) {
-					tmp = check_object(prop, error, val, null, null, definitions, currentpath);
+					tmp = check_object(prop, error, val, null, null, definitions, currentpath, partial);
 					if (tmp != null) {
 						response[key] = tmp;
 						count++;
@@ -594,7 +597,7 @@ function check_object(meta, error, value, response, stop, definitions, path) {
 						var ref = typeof(prop.$ref) === 'object' ? prop.$ref : readdef(prop.$ref, definitions);
 						if (ref) {
 							var newerror = new F.ErrorBuilder();
-							tmp = transform(ref, newerror, val, false, currentpath);
+							tmp = transform(ref, newerror, val, false, currentpath, partial);
 							if (newerror.items.length) {
 								for (var err of newerror.items) {
 									error.push2(err.name, err.path);
@@ -611,7 +614,7 @@ function check_object(meta, error, value, response, stop, definitions, path) {
 				}
 				break;
 			case 'array':
-				tmp = check_array(prop, error, val, null, definitions, currentpath);
+				tmp = check_array(prop, error, val, null, definitions, currentpath, partial);
 				if (tmp != null) {
 					response[key] = tmp;
 					count++;
@@ -621,7 +624,7 @@ function check_object(meta, error, value, response, stop, definitions, path) {
 				if (prop.$ref) {
 					var ref = F.jsonschemas[prop.$ref];
 					if (ref) {
-						tmp = check_object(ref, error, val, null, null, definitions, currentpath);
+						tmp = check_object(ref, error, val, null, null, definitions, currentpath, partial);
 						if (tmp != null) {
 							response[key] = tmp;
 							count++;
@@ -652,7 +655,7 @@ function check_object(meta, error, value, response, stop, definitions, path) {
 		return response;
 }
 
-function transform(meta, error, value, stop, path) {
+function transform(meta, error, value, stop, path, partial) {
 
 	var output;
 
@@ -674,10 +677,10 @@ function transform(meta, error, value, stop, path) {
 			output = check_date(meta, error, value, null, path);
 			break;
 		case 'object':
-			output = check_object(meta, error, value, null, stop, meta, path);
+			output = check_object(meta, error, value, null, stop, meta, path, partial);
 			break;
 		case 'array':
-			output = check_array(meta, error, value, stop, meta, path);
+			output = check_array(meta, error, value, stop, meta, path, partial);
 			break;
 		default:
 			error.push2('.type', path);
